add endpoints for active tasks and task status
- refactor celery worker definition
